# newton_raphson_trials

./: .gitignore  README.md
newton_raphson_cpp/: CMakeLists.txt
newton_raphson_cpp/src/: newton_ralphson.cpp
newton_raphson_py/: newton_ralphson.py
